Fixing exit button flickering before hover image is cached

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -341,7 +341,8 @@ body.room-bg-active #room-bg {
 }
 
 .fab-exit:hover {
-  background: #dedede url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 560 560'%3E%3Cpath fill='%231f7a47' d='M%20490.00847%2C426.30353%20476.01016%2C389.202%20c%20-6.29359%2C-15.40393%20-20.29754%2C-25.90277%20-37.80672%2C-25.90277%20h%20-6.29359%20V%2043.395188%20H%20128.10708%20V%20220.49813%20h%2039.90082%20l%2045.50014%2C-56.705%20c%209.10455%2C-10.49319%2023.09721%2C-17.50371%2038.49535%2C-17.50371%20h%2097.30516%20c%2015.39814%2C0%2028.69653%2C8.39343%2035.69568%2C21.70324%20l%2028.70782%2C54.59395%20c%201.39983%2C2.09977%202.0941%2C4.9051%202.0941%2C8.40471%200%2C9.79327%20-8.39898%2C18.19234%20-18.20344%2C18.19234%20-7.69907%2C0%20-13.29275%2C-3.49397%20-16.80361%2C-9.79327%20l%20-25.89123%2C-49.70013%20h%20-42.00056%20l%2032.1961%2C80.50236%209.80446%2C102.89424%20h%2083.28993%20c%2013.30968%2C0%2023.80841%2C8.40471%2028.70782%2C19.60911%20l%209.0989%2C23.79736%20H%20333.19921%20c%20-10.48744%2C0%20-19.59763%2C-7.6935%20-20.2919%2C-18.19798%20l%20-9.80446%2C-90.30128%20-76.99069%2C159.59924%20c%20-4.20513%2C9.10464%20-14.00395%2C15.40394%20-25.20259%2C15.40394%20h%20-37.1068%20l%2094.5055%2C-195.30657%20-29.3908%2C-73.4975%20-28.0079%2C34.30185%20c%20-6.99351%2C9.10463%20-18.90901%2C15.39829%20-31.50184%2C15.39829%20h%20-41.295%20v%20231.00261%20l%2065.79768%2C65.09843%20H%200%20V%200%20h%20560%20v%20559.99436%20h%20-63.00367%20l%20-65.09212%2C-65.09843%20v%20-68.5924%20z%20M%20228.20627%2C64.39286%20c%2021.70302%2C0%2039.89517%2C18.203626%2039.89517%2C39.90122%200%2C21.70324%20-18.19215%2C39.2013%20-39.89517%2C39.2013%20-21.70302%2C0%20-39.20655%2C-17.49806%20-39.20655%2C-39.2013%200%2C-21.697594%2017.50353%2C-39.90122%2039.20655%2C-39.90122%20M%20245.70979%2C509.59994%20296.10934%2C560%20h%20-60.90957%20l%20-65.79768%2C-65.10407%20h%2039.19526%20c%2014.00959%2C0%2027.30798%2C5.60502%2037.11244%2C14.70401'/%3E%3C/svg%3E") center / 115% 115% no-repeat;
+  /* Avoid swapping the SVG on hover (some browsers briefly flash while decoding the new background-image) */
+  background-color: #dedede;
   box-shadow: var(--shadow-hard);
 }
 
